# Vox

./: .env.example  .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/wasm/: README.md
client/public/worklets/: denoise-processor.js
client/src/: App.tsx  api.ts  config.ts  styles.css  types.ts
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/resources/wasm/: README.md
client/src-tauri/scripts/: gen-icons.mjs
client/src-tauri/src/: denoise.rs  lib.rs  main.rs
client/src/components/: Auth.tsx  DenoiseControl.tsx  Lobby.tsx  ParticipantTile.tsx  RoomView.tsx
client/src/lib/: denoise.ts  useAuth.ts  useSettings.ts  useVoiceRoom.ts
config/: livekit.yaml  turnserver.conf
deploy/: docker-compose.yml  livekit-prod.yaml
deploy/local/: README.md  docker-compose.yml  livekit-dev.yaml
server/: Dockerfile  go.mod  go.sum
server/cmd/voiceapp/: main.go
server/internal/api/: server.go
server/internal/auth/: auth.go
server/internal/config/: config.go
server/internal/db/: db.go
server/internal/lkauth/: token.go
server/internal/turn/: creds.go
