[package]
name = "voiceapp"
version = "0.1.0"
description = "VoiceApp desktop client — high-quality group voice with AI denoise"
authors = ["VoiceApp"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's mobile targets link against; desktop uses the bin.
[lib]
name = "voiceapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
